--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment-timezone": "^0.5.40",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
